--- a/src/style/switchButton.css
+++ b/src/style/switchButton.css
@@ -63,7 +63,6 @@ html {
 
 body {
 	min-height: 100vh;
-	overflow: hidden;
 	background: var(--bg);
   transition: background var(--speed) var(--easing);
 	font-family: sans-serif, system-ui;
